<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">maitulya_s_application2</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_fmh">FMH</string>
<string name="lbl_bee">BEE</string>
<string name="lbl_acd">ACD</string>
<string name="lbl_pdhc">PDHC</string>
<string name="lbl_acsd">ACSD</string>
<string name="lbl_s">S</string>
<string name="lbl_fe">FE</string>
<string name="lbl_isc">ISC</string>
<string name="lbl_syllabus">SYLLABUS</string>
<string name="lbl_fmd">FMD</string>
<string name="lbl_pps">PPS</string>
<string name="lbl_nlp">NLP</string>
<string name="lbl_pqaf">PQAF</string>
<string name="lbl_iot2">IoT</string>
<string name="lbl_ipdc">IPDC</string>
<string name="lbl_sem_42">SEM - 4</string>
<string name="lbl_wc">WC</string>
<string name="lbl_your_syllabus2">YOUR SYLLABUS </string>
<string name="lbl_oopi">OOPI</string>
<string name="lbl_dhs">DHS</string>
<string name="lbl_python">Python</string>
<string name="lbl_ceam">CEAM</string>
<string name="lbl_qre">QRE</string>
<string name="lbl_cfd">CFD</string>
<string name="lbl_download2">DOWNLOAD</string>
<string name="lbl_ec">EC </string>
<string name="lbl_ppe">PPE</string>
<string name="lbl_ef">EF</string>
<string name="lbl_ed">ED</string>
<string name="lbl_ee">EE</string>
<string name="lbl_cvpde">CVPDE</string>
<string name="lbl_bda">BDA</string>
<string name="lbl_hvdc">HVDC</string>
<string name="lbl_btp">BTP</string>
<string name="lbl_bct">BCT</string>
<string name="lbl_iai">IAI</string>
<string name="lbl_em">EM</string>
<string name="lbl_industry">INDUSTRY</string>
<string name="lbl_es">ES</string>
<string name="lbl_vd">VD</string>
<string name="lbl_sem_52">SEM - 5</string>
<string name="lbl_select">SELECT </string>
<string name="lbl_sa_ii">SA-II</string>
<string name="lbl_et">ET</string>
<string name="lbl_tm">TM</string>
<string name="lbl_bce">BCE</string>
<string name="msg_syllabus_pape">Syllabus &amp; Paper</string>
<string name="lbl_aaa">AAA</string>
<string name="lbl_cpdc">CPDC</string>
<string name="lbl_from">From</string>
<string name="lbl_tatv">TATV</string>
<string name="msg_maitulya_vaghel">Maitulya Vaghela </string>
<string name="lbl_df">DF</string>
<string name="lbl_tv">TV</string>
<string name="lbl_cea">CEA</string>
<string name="lbl_auto">Auto</string>
<string name="lbl_your_semester">YOUR SEMESTER </string>
<string name="lbl_eia">EIA</string>
<string name="lbl_dm">DM</string>
<string name="lbl_oop2">OOP2</string>
<string name="lbl_sem_62">SEM - 6</string>
<string name="lbl_let_s_go">Let\u2019s Go</string>
<string name="lbl_ds">DS</string>
<string name="lbl_anvh">ANVH</string>
<string name="lbl_em_ii">EM-II</string>
<string name="lbl_amee">AMEE</string>
<string name="lbl_fmfm">FMFM</string>
<string name="lbl_ktm">KTM</string>
<string name="lbl_sm">SM</string>
<string name="lbl_sp">SP</string>
<string name="lbl_aiml">AIML</string>
<string name="lbl_pypr">PYPR</string>
<string name="lbl_cd">CD</string>
<string name="lbl_ce">CE</string>
<string name="lbl_tem">TEM</string>
<string name="lbl_ohap">OHAP</string>
<string name="lbl_ss">SS</string>
<string name="lbl_cc">CC</string>
<string name="lbl_cg">CG</string>
<string name="lbl_cm">CM</string>
<string name="lbl_rac">RAC</string>
<string name="lbl_apc">APC</string>
<string name="lbl_a_p">A&amp;P</string>
<string name="lbl_sem_72">SEM - 7</string>
<string name="lbl_cpdp">CPDP</string>
<string name="lbl_cn">CN</string>
<string name="lbl_rae">RAE</string>
<string name="lbl_ape">APE</string>
<string name="lbl_ct">CT</string>
<string name="lbl_te">TE</string>
<string name="lbl_acab">ACAB</string>
<string name="lbl_cs">CS</string>
<string name="lbl_iot">IOT</string>
<string name="msg_international_i">INTERNATIONAL INNOVATIVE UNIVERSITY</string>
<string name="lbl_rp">RP</string>
<string name="lbl_english">ENGLISH</string>
<string name="lbl_rs">RS</string>
<string name="lbl_dme">DME</string>
<string name="lbl_psoac">PSOAC</string>
<string name="lbl_awp">AWP</string>
<string name="lbl_pds">PDS</string>
<string name="lbl_be">BE</string>
<string name="lbl_vtah">VTAH</string>
<string name="lbl_chemistry">CHEMISTRY</string>
<string name="lbl_se">SE</string>
<string name="lbl_electrical">Electrical </string>
<string name="lbl_pdc">PDC</string>
<string name="lbl_rubber">Rubber</string>
<string name="lbl_sg">SG</string>
<string name="lbl_ene">ENE</string>
<string name="lbl_vlsi">VLSI</string>
<string name="lbl_computer">Computer </string>
<string name="lbl_ae">AE</string>
<string name="lbl_drcs">DRCS</string>
<string name="lbl_ai">AI</string>
<string name="lbl_ies">IES</string>
<string name="lbl_am">AM</string>
<string name="lbl_mmm">MMM</string>
<string name="lbl_eml">EML</string>
<string name="lbl_emi">EMI</string>
<string name="lbl_computer2">Computer  </string>
<string name="lbl_pm">PM</string>
<string name="lbl_psi">PSI</string>
<string name="lbl_foc">FOC</string>
<string name="lbl_aed">AED</string>
<string name="lbl_ps">PS</string>
<string name="lbl_agcv">AGCV</string>
<string name="lbl_cesgi">CESGI</string>
<string name="lbl_vmag">VMAG</string>
<string name="lbl_texttile">Texttile</string>
<string name="lbl_ade">ADE</string>
<string name="lbl_aeae">AEAE</string>
<string name="lbl_ecam">ECAM</string>
<string name="lbl_fmafm">FMAFM</string>
<string name="lbl_di_vp">DI&amp;VP</string>
<string name="lbl_rsgis">RSGIS</string>
<string name="lbl_environ">Environ </string>
<string name="lbl_adc">ADC</string>
<string name="lbl_or">OR</string>
<string name="lbl_os">OS</string>
<string name="lbl_ada">ADA</string>
<string name="lbl_sem_32">SEM - 3 </string>
<string name="lbl_eeec">EEEC</string>
<string name="lbl_act">ACT</string>
<string name="lbl_ampat">AMPAT</string>
<string name="lbl_acmd">ACMD</string>
<string name="lbl_ice">ICE</string>
<string name="lbl_pe">PE</string>
<string name="lbl_boas">BOAS</string>
<string name="lbl_pc">PC</string>
<string name="lbl_your_syllabus">YOUR SYLLABUS</string>
<string name="lbl_dis">DIS</string>
<string name="lbl_msm">MSM</string>
<string name="lbl_soc">SOC</string>
<string name="lbl_download">DOWNLOAD  </string>
<string name="lbl_bme">BME</string>
<string name="lbl_nt">NT</string>
<string name="lbl_mcwc">MCWC</string>
<string name="lbl_coa">COA</string>
<string name="lbl_ob">OB</string>
<string name="lbl_phe">PHE</string>
<string name="lbl_ajp">AJP</string>
<string name="lbl_study_smarter">Study Smarter</string>
<string name="lbl_mam">MAM</string>
<string name="lbl_ml">ML</string>
<string name="lbl_ictd">ICTD</string>
<string name="lbl_mm">MM</string>
<string name="lbl_mp">MP</string>
<string name="lbl_ec2">EC</string>
<string name="lbl_mt">MT</string>
<string name="lbl_mai">MAI</string>
<string name="lbl_iiot">IIoT</string>
<string name="lbl_mica">MICA</string>
<string name="lbl_mad">MAD</string>
<string name="lbl_dom">DOM</string>
<string name="lbl_eahv">EAHV</string>
<string name="lbl_toc">TOC</string>
<string name="lbl_nse">NSE</string>
<string name="lbl_sem_4">SEM-4</string>
<string name="lbl_vrs">VRS</string>
<string name="lbl_sem_3">SEM-3</string>
<string name="lbl_r_na">R&amp;NA</string>
<string name="lbl_sem_2">SEM-2</string>
<string name="lbl_sem_1">SEM-1</string>
<string name="lbl_sem_8">SEM-8</string>
<string name="lbl_sem_7">SEM-7</string>
<string name="lbl_sem_6">SEM-6</string>
<string name="lbl_sem_5">SEM-5</string>
<string name="lbl_dbms">DBMS</string>
<string name="lbl_icps">ICPS</string>
<string name="lbl_paper">PAPER</string>
<string name="lbl_gtu">GTU</string>
<string name="lbl_mpi">MPI</string>
<string name="lbl_engineering">Engineering </string>
<string name="lbl_cle">CLE</string>
<string name="lbl_your_stream">YOUR STREAM</string>
<string name="lbl_mos">MOS</string>
<string name="lbl_osv">OSV</string>
<string name="lbl_ocf">OCF</string>
<string name="lbl_wsn">WSN</string>
<string name="lbl_hve">HVE</string>
<string name="msg_the_gtu_syllabu">The GTU Syllabus &amp; Paper app is a comprehensive solution for course management. It features an intuitive interface, a resource library for custom collages, and real-time collaboration capabilities. Ideal for students and educators.</string>
<string name="lbl_pem">PEM</string>
<string name="lbl_wreh">WREH</string>
<string name="lbl_wse">WSE</string>
<string name="lbl_chemical">Chemical </string>
<string name="lbl_cst">CST</string>
<string name="lbl_egd">EGD</string>
<string name="lbl_plastic">Plastic</string>
<string name="lbl_tmal">TMAL</string>
<string name="lbl_ins">INS</string>
<string name="lbl_ic">IC</string>
<string name="lbl_efe">EFE</string>
<string name="lbl_ia">IA</string>
<string name="lbl_sap">SAP</string>
<string name="lbl_mfa">MFA</string>
<string name="lbl_physics">PHYSICS</string>
<string name="lbl_sas">SAS</string>
<string name="lbl_ie">IE</string>
<string name="lbl_sai">SAI</string>
<string name="lbl_dmbi">DMBI</string>
<string name="lbl_im">IM</string>
<string name="lbl_ir">IR</string>
<string name="lbl_r_a">R&amp;A</string>
<string name="lbl_is">IS</string>
<string name="lbl_ip">IP</string>
<string name="lbl_mechnical">Mechnical </string>
<string name="lbl_it">IT</string>
<string name="lbl_ps_ii">PS-II</string>
<string name="lbl_cam">CAM</string>
<string name="lbl_afaps">AFAPS</string>
<string name="lbl_dss">DSS</string>
<string name="lbl_eed">EED</string>
<string name="lbl_dsp">DSP</string>
<string name="lbl_eeb">EEB</string>
<string name="lbl_cad">CAD</string>
<string name="lbl_spv">SPV</string>
<string name="lbl_aml">AML</string>
<string name="lbl_sem_1_2">SEM - 1 &amp;2 </string>
<string name="lbl_pacv">PACV</string>
<string name="lbl_utp">UTP</string>
<string name="lbl_ohp">OHP</string>
<string name="lbl_amd">AMD</string>
<string name="lbl_dsd">DSD</string>
<string name="lbl_ht">HT</string>
<string name="lbl_civil">Civil</string>
<string name="lbl_fomd">FOMD</string>
<string name="lbl_mtt">MTT</string>
<string name="lbl_msam">MSAM</string>
<string name="lbl_wp">WP</string>
<string name="lbl_clae">CLAE</string>
<string name="lbl_katm">KATM</string>
<string name="lbl_d_dbms">D-DBMS</string>
<string name="lbl_wt">WT</string>
<string name="lbl_ge">GE</string>
<string name="lbl_mechanical">Mechanical </string>
<string name="lbl_etc">ETC</string>
<string name="lbl_sem_1_22">SEM-1&amp;2</string>
<string name="lbl_eaeb">EAEB</string>
<string name="lbl_emmi">EMMI</string>
<string name="lbl_maths_1">MATHS-1</string>
<string name="lbl_ecm">ECM</string>
<string name="lbl_maths_2">MATHS-2</string>
<string name="lbl_fem">FEM</string>
</resources>
