<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearColumnsemone"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSemOne"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/lbl_sem_1" android:textAllCaps="false"
            style="@style/btnGradientRounded_1" tools:text="@string/lbl_sem_1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSemThree"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_55pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/lbl_sem_3" android:textAllCaps="false"
            style="@style/btnGradientRounded_1" tools:text="@string/lbl_sem_3"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSemFive"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_55pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/lbl_sem_5" android:textAllCaps="false"
            style="@style/btnGradientRounded_1" tools:text="@string/lbl_sem_5"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSemSeven"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_55pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv" android:singleLine="true"
            android:text="@string/lbl_sem_7" android:textAllCaps="false"
            style="@style/btnGradientRounded_1" tools:text="@string/lbl_sem_7"/>
    </LinearLayout>
</layout>
