<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearHOME"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end" android:id="@+id/txtGTU"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_64pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.16" android:singleLine="true"
            android:text="@string/lbl_gtu"
            style="@style/txtInterextrabold32" tools:text="@string/lbl_gtu"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtSyllabusPape"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.12" android:singleLine="true"
            android:text="@string/msg_syllabus_pape"
            android:textAllCaps="true"
            style="@style/txtInterextrabold24" tools:text="@string/msg_syllabus_pape"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtDescription"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.05"
            android:text="@string/msg_the_gtu_syllabu"
            style="@style/txtIntermedium10" tools:text="@string/msg_the_gtu_syllabu"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtStudySmarter"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_45pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.12" android:singleLine="true"
            android:text="@string/lbl_study_smarter"
            style="@style/txtInterextrabold24_1" tools:text="@string/lbl_study_smarter"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLetsGo"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_62pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_38pxv"
            android:layout_width="@dimen/_231pxh"
            android:letterSpacing="0.12"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@string/lbl_let_s_go"
            android:textAllCaps="false"
            style="@style/btnGradientRounded" tools:text="@string/lbl_let_s_go"/>
        <ImageView android:id="@+id/imageRectangle"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_300pxh"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="@dimen/_300pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_rectangle}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle"/>
    </LinearLayout>
</layout>
