<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearFIRSTPAGE"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle">
        <ImageView android:id="@+id/imagePngkitbabasahe"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_94pxh"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_135pxv"
            android:layout_width="@dimen/_78pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_pngkitbabasahe}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_pngkitbabasahe"/>
        <TextView android:ellipsize="end" android:id="@+id/txtGTU"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.2" android:singleLine="true"
            android:text="@string/lbl_gtu" style="@style/txtInterbold40" tools:text="@string/lbl_gtu"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtPrice"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.07" android:singleLine="true"
            android:text="@string/msg_international_i"
            style="@style/txtIntermedium13" tools:text="@string/msg_international_i"/>
        <TextView android:ellipsize="end" android:id="@+id/txtFrom"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_388pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.07" android:singleLine="true"
            android:text="@string/lbl_from"
            style="@style/txtInterbold15" tools:text="@string/lbl_from"/>
        <TextView android:ellipsize="end" android:id="@+id/txtLanguage"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.07" android:singleLine="true"
            android:text="@string/msg_maitulya_vaghel"
            style="@style/txtInterbold15" tools:text="@string/msg_maitulya_vaghel"/>
    </LinearLayout>
</layout>
