<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <FrameLayout android:id="@+id/frameAndroidLarge"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnsemsix"
            android:layout_gravity="top|start"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_27pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:gravity="end"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearRowsemsix"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtSEMSix"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_9pxv"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_weight="0.71"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl_sem_6"
                        style="@style/txtInterblack32_2" tools:text="@string/lbl_sem_6"/>
                    <ImageButton
                        android:background="@drawable/layer_list_radius_22_5"
                        android:id="@+id/btnArrowOne"
                        android:layout_height="@dimen/_45pxh"
                        android:layout_marginStart="@dimen/_166pxh"
                        android:layout_width="@dimen/_45pxh"
                        android:paddingHorizontal="@dimen/_12pxh"
                        android:paddingVertical="@dimen/_12pxv"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_arrow1" tools:ignore="ContentDescription"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <View android:background="@color/indigo_800"
                android:id="@+id/lineLineOne"
                android:layout_height="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_18pxv" android:layout_width="@dimen/_170pxh"/>
            <LinearLayout android:gravity="end"
                android:id="@+id/linearRowap"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnAp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_19pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_a_p"
                    android:textAllCaps="false"
                    style="@style/btnGradientRounded_2"
                    textUnderline="true" tools:text="@string/lbl_a_p"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnCn"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_19pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_cn"
                    android:textAllCaps="false"
                    style="@style/btnGradientRounded_2"
                    textUnderline="true" tools:text="@string/lbl_cn"/>
            </LinearLayout>
            <LinearLayout android:gravity="end"
                android:id="@+id/linearRowcpdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnCpdp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_19pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_cpdp"
                    android:textAllCaps="false"
                    style="@style/btnGradientRounded_2"
                    textUnderline="true" tools:text="@string/lbl_cpdp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnFoc"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_19pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_foc"
                    android:textAllCaps="false"
                    style="@style/btnGradientRounded_2"
                    textUnderline="true" tools:text="@string/lbl_foc"/>
            </LinearLayout>
            <LinearLayout android:gravity="end"
                android:id="@+id/linearRowse"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnSe"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_19pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_se"
                    android:textAllCaps="false"
                    style="@style/btnGradientRounded_2"
                    textUnderline="true" tools:text="@string/lbl_se"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnWt"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_19pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_19pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_wt"
                    android:textAllCaps="false"
                    style="@style/btnGradientRounded_2"
                    textUnderline="true" tools:text="@string/lbl_wt"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
